--- a/timg_integration/timg_integration/doctype/timg_integration_settings/timg_integration_settings.json
+++ b/timg_integration/timg_integration/doctype/timg_integration_settings/timg_integration_settings.json
@@ -7,7 +7,12 @@
  "field_order": [
   "section_break_01",
   "email_notification_enabled",
-  "emails"
+  "emails",
+  "section_break_02",
+  "saleor_integration_enabled",
+  "saleor_integration_url",
+  "saleor_integration_username",
+  "saleor_integration_password"
  ],
  "fields": [
   {
@@ -26,10 +31,36 @@
    "fieldtype": "Table",
    "label": "Emails",
    "options": "TIMG Integration Settings Emails"
+  },
+  {
+   "fieldname": "section_break_02",
+   "fieldtype": "Section Break",
+   "label": "Saleor Integration"
+  },
+  {
+   "default": "0",
+   "fieldname": "saleor_integration_enabled",
+   "fieldtype": "Check",
+   "label": "Saleor Integration Enabled"
+  },
+  {
+   "fieldname": "saleor_integration_url",
+   "fieldtype": "Data",
+   "label": "Saleor Integration URL"
+  },
+  {
+   "fieldname": "saleor_integration_username",
+   "fieldtype": "Data",
+   "label": "Saleor Integration Username"
+  },
+  {
+   "fieldname": "saleor_integration_password",
+   "fieldtype": "Password",
+   "label": "Saleor Integration Password"
   }
  ],
  "issingle": 1,
- "modified": "2020-12-03 11:02:35.134564",
+ "modified": "2020-12-03 15:18:13.265409",
  "modified_by": "Administrator",
  "module": "Timg Integration",
  "name": "TIMG Integration Settings",
